man page translations: update French

--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -41,10 +41,8 @@ msgstr "76.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2023-03-26"
 msgid "2023-04-30"
-msgstr "26-03-2023"
+msgstr "30-04-2023"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1912,7 +1910,7 @@ msgstr "Cette option modifie l'ordre dans lequel les pistes d'un fichier source 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:429
 msgid "If this option isn't given, tracks will be sorted by their type first &amp; the order of their source file second. Video tracks come first followed by audio &amp; subtitle tracks. Other rarely used track types come last."
-msgstr ""
+msgstr "Si cette option n'est pas fournie, les pistes seront triées d'abord selon leur type puis ensuite selon l'ordre du fichier source. Les pistes vidéo viennent en premier suivies par les pistes audio et de sous-titres. Les pistes rarement utilisées viennent en dernier."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:436
