--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (77.0-0~bunkus01) lunar; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 04 Jun 2023 16:35:32 +0200
+
 mkvtoolnix (76.0-0~bunkus01) lunar; urgency=low
 
   * New version.
