--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.0.0\n"
-"POT-Creation-Date: 2023-05-20 13:25+0200\n"
+"POT-Creation-Date: 2023-06-04 16:35+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: overdrive80 <lukillas.ole@gmail.com>, 2016-2023\n"
 "Language-Team: Spanish (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/es/)\n"
@@ -28,8 +28,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "76.0"
-msgstr "76.0"
+msgid "77.0"
+msgstr "77.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -37,7 +37,9 @@ msgstr "76.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2023-04-30"
+#, fuzzy
+#| msgid "2023-04-30"
+msgid "2023-06-04"
 msgstr "2023-04-30"
 
 #. type: Content of the mkvmerge entity
