program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -3572,7 +3572,7 @@ msgstr "Afegeix fitxers d'etiquetes"
 #: src/mkvtoolnix-gui/merge/tab.cpp:602
 #, no-c-format
 msgid "Adding the job to the queue failed"
-msgstr ""
+msgstr " Ha fallat en afegir la tasca a la cua"
 
 #: src/mkvtoolnix-gui/chapter_editor/tab.cpp:236
 #, no-c-format
@@ -8651,7 +8651,7 @@ msgstr "Lloc &web del MKVToolNix"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:773
 #, no-c-format
 msgid "MKVToolNix GUI acts as a portable application but cannot write to its base directory, '%1'. If it should act as an installed application, remove the file '%2'."
-msgstr ""
+msgstr "La IGU de les MKVToolNix actua com una aplicació portàtil però no pot escriure en el seu directori base, «%1». Si hauria d'actuar com una aplicació instal·lada, elimineu el fitxer «%2»."
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:236
 #: src/mkvtoolnix-gui/merge/tool.cpp:345
@@ -11040,9 +11040,9 @@ msgstr "El desament dels capítols ha fallat."
 
 #: src/mkvtoolnix-gui/util/file.cpp:152
 #: src/mkvtoolnix-gui/util/option_file.cpp:31
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Saving the file '%1' failed. Error message from the system: %2"
-msgstr "El desament del fitxer ha fallat. Missatge d'error del sistema: %1"
+msgstr "No s'ha pogut desar el fitxer «%1». Missatge d'error del sistema: %2"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:255
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:264
@@ -11888,7 +11888,7 @@ msgstr "Emmagatzema els canvis de les dades CodecPrivate en els elements CodecSt
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
 msgid "Storing result in cache filed"
-msgstr ""
+msgstr "S'emmagatzema el resultat a la memòria cau arxivada"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2298
@@ -12080,7 +12080,7 @@ msgstr "Li indica al «mkvmerge» que posi la majoria dels blocs de dades «n» 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:769
 #, no-c-format
 msgid "Temporary files cannot be created. Additional information: %1"
-msgstr ""
+msgstr "No es poden crear fitxers temporals. Informació addicional: %1"
 
 #: src/mkvtoolnix-gui/info/job_settings_widget.cpp:94
 #: src/mkvtoolnix-gui/merge/input.cpp:1409
