program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -3603,7 +3603,7 @@ msgstr "Añadiendo archivos de etiquetas"
 #: src/mkvtoolnix-gui/merge/tab.cpp:602
 #, no-c-format
 msgid "Adding the job to the queue failed"
-msgstr ""
+msgstr "Error al añadir el trabajo a la cola"
 
 #: src/mkvtoolnix-gui/chapter_editor/tab.cpp:236
 #, no-c-format
@@ -8684,7 +8684,7 @@ msgstr "Página &web de MKVToolNix"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:773
 #, no-c-format
 msgid "MKVToolNix GUI acts as a portable application but cannot write to its base directory, '%1'. If it should act as an installed application, remove the file '%2'."
-msgstr ""
+msgstr "MKVToolNix GUI actúa como una aplicación portable pero no puede escribir en su directorio base, '%1'. Si debe actuar como una aplicación instalada, elimine el archivo '%2'."
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:236
 #: src/mkvtoolnix-gui/merge/tool.cpp:345
@@ -11079,9 +11079,9 @@ msgstr "Error al guardar capítulos."
 
 #: src/mkvtoolnix-gui/util/file.cpp:152
 #: src/mkvtoolnix-gui/util/option_file.cpp:31
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Saving the file '%1' failed. Error message from the system: %2"
-msgstr "Error al guardar el archivo. Mensaje de error del sistema: %1"
+msgstr "Error al guardar el archivo '%1'. Mensaje de error del sistema: %2"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:255
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:264
@@ -11931,7 +11931,7 @@ msgstr "Almacena los cambios de los datos CodecPrivate en los elementos CodecSta
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
 msgid "Storing result in cache filed"
-msgstr ""
+msgstr "Almacenar resultado en caché archivada"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2298
@@ -12124,7 +12124,7 @@ msgstr "Le dice a mkvmerge que no escriba más de 'n' bloques de información po
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:769
 #, no-c-format
 msgid "Temporary files cannot be created. Additional information: %1"
-msgstr ""
+msgstr "No se pueden crear archivos temporales. Información adicional: %1"
 
 #: src/mkvtoolnix-gui/info/job_settings_widget.cpp:94
 #: src/mkvtoolnix-gui/merge/input.cpp:1409
