program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -3525,7 +3525,7 @@ msgstr "Ajout des fichiers de balises"
 #: src/mkvtoolnix-gui/merge/tab.cpp:602
 #, no-c-format
 msgid "Adding the job to the queue failed"
-msgstr ""
+msgstr "Échec de l'ajout de la tâche à la file d'attente"
 
 #: src/mkvtoolnix-gui/chapter_editor/tab.cpp:236
 #, no-c-format
@@ -6767,7 +6767,7 @@ msgstr "La création du fichier « {0} » a échoué : {1}\n"
 #: src/extract/xtr_base.cpp:81
 #, no-c-format
 msgid "Failed to create the file '{0}': {1} ({2})\n"
-msgstr "La création du fichier « {0} » a échoué : {1} ({2})\n"
+msgstr "Échec de la création du fichier « {0} » : {1} ({2})\n"
 
 #: src/extract/xtr_tta.cpp:45
 #, no-c-format
@@ -6777,7 +6777,7 @@ msgstr "La création du fichier temporaire « {0} » a échoué : {1}\n"
 #: src/extract/xtr_textsubs.cpp:342
 #, no-c-format
 msgid "Failed to parse the USF codec private data for track {0}: {1}\n"
-msgstr "L'analyse des données de codec privées USF pour la piste {0} a échoué : {1}\n"
+msgstr "Échec de l'analyse des données de codec privées USF pour la piste {0} : {1}\n"
 
 #: src/common/kax_element_names.cpp:92
 #, no-c-format
@@ -8604,7 +8604,7 @@ msgstr "Site &Web de MKVToolNix…"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:773
 #, no-c-format
 msgid "MKVToolNix GUI acts as a portable application but cannot write to its base directory, '%1'. If it should act as an installed application, remove the file '%2'."
-msgstr ""
+msgstr "MKVToolNix GUI se comporte en tant qu'application portable mais ne peut pas écrire dans son dossier de base « %1 ». Si elle doit se comporter en tant qu'application installée, retirer le fichier « %2» ."
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:236
 #: src/mkvtoolnix-gui/merge/tool.cpp:345
@@ -10242,7 +10242,7 @@ msgstr "Programme"
 #: src/mkvtoolnix-gui/jobs/program_runner.cpp:207
 #, no-c-format
 msgid "Program execution failed"
-msgstr "L'exécution du programme a échoué."
+msgstr "Échec de l'exécution du programme"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:39
 #, no-c-format
@@ -10521,7 +10521,7 @@ msgstr "Échec en lecture"
 #: src/mkvtoolnix-gui/util/widget.cpp:207
 #, no-c-format
 msgid "Reading the segment UID failed"
-msgstr "La lecture de l'UID de segment a échoué"
+msgstr "Échec de la lecture de l'UID de segment"
 
 #: src/common/cli_parser.cpp:196
 #, no-c-format
@@ -10998,15 +10998,15 @@ msgstr "L'enregistrement des chapitres a échoué."
 
 #: src/mkvtoolnix-gui/util/file.cpp:152
 #: src/mkvtoolnix-gui/util/option_file.cpp:31
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Saving the file '%1' failed. Error message from the system: %2"
-msgstr "L'enregistrement du fichier a échoué. Message d'erreur du système : %1"
+msgstr "Échec de l'enregistrement du fichier « %1 ». Message d'erreur système : %2"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:255
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:264
 #, no-c-format
 msgid "Saving the modified attachments failed."
-msgstr "Échec de l'enregistrement des pièces jointes modifiées."
+msgstr "L'enregistrement des pièces jointes modifiées a échoué."
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:228
 #, no-c-format
@@ -11850,7 +11850,7 @@ msgstr "Stocke les modifications des données de CodecPrivate dans les élément
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
 msgid "Storing result in cache filed"
-msgstr ""
+msgstr "Stockage du résultat en cache effectué"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2298
@@ -12043,7 +12043,7 @@ msgstr "Demande à mkvmerge de mettre au plus « n » blocs de données dans cha
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:769
 #, no-c-format
 msgid "Temporary files cannot be created. Additional information: %1"
-msgstr ""
+msgstr "Impossible de créer les fichiers temporaires. Informations supplémentaires : %1"
 
 #: src/mkvtoolnix-gui/info/job_settings_widget.cpp:94
 #: src/mkvtoolnix-gui/merge/input.cpp:1409
@@ -14711,7 +14711,7 @@ msgstr "Mettre à jour les propriétés de pièce jointe"
 #: src/propedit/propedit.cpp:120
 #, no-c-format
 msgid "Updating the 'document type version' or 'document type read version' header fields failed."
-msgstr "La mise à jour des champs d'entêtes « version du type de document » ou « version de lecture du type de document » a échoué."
+msgstr "La mise à jour des champs d'entêtes « version du type de document » ou « version de lecture du type de document » a échoué."
 
 #: src/propedit/propedit.cpp:31
 #, no-c-format
@@ -15694,7 +15694,7 @@ msgstr "Au moins un dossier a été ajouté par glisser-déposer ou copier-colle
 #: src/common/compression/zlib.cpp:90
 #, no-c-format
 msgid "Zlib decompression failed. Result: {0}\n"
-msgstr "Échec de décompression zlib. Résultat : {0}\n"
+msgstr "Échec de décompression zlib. Résultat : {0}\n"
 
 #: src/output/p_ac3.cpp:236
 #, no-c-format
@@ -15893,7 +15893,7 @@ msgstr "flac_decoder : impossible de définir metadata_respond_all.\n"
 #: src/common/flac.cpp:132
 #, no-c-format
 msgid "flac_decoder: FLAC__stream_decoder_new() failed.\n"
-msgstr "flac_decoder : échec de FLAC__stream_decoder_new().\n"
+msgstr "flac_decoder : FLAC__stream_decoder_new() a échoué.\n"
 
 #: src/input/r_ogm_flac.cpp:138
 #, no-c-format
@@ -16348,7 +16348,7 @@ msgstr "échec de ogg_stream_init pour le flux numéro {0}. Tentative de poursui
 #: src/input/r_ogm.cpp:341
 #, no-c-format
 msgid "ogg_sync_buffer failed\n"
-msgstr "échec de ogg_sync_buffer\n"
+msgstr "Échec de ogg_sync_buffer\n"
 
 #: src/common/kax_info.cpp:862
 #, no-c-format
