program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -3534,7 +3534,7 @@ msgstr "Aggiunta file tag"
 #: src/mkvtoolnix-gui/merge/tab.cpp:602
 #, no-c-format
 msgid "Adding the job to the queue failed"
-msgstr ""
+msgstr "Aggiunta del lavoro alla coda non riuscita"
 
 #: src/mkvtoolnix-gui/chapter_editor/tab.cpp:236
 #, no-c-format
@@ -8619,6 +8619,8 @@ msgstr "Sito &web MKVToolNix"
 #, no-c-format
 msgid "MKVToolNix GUI acts as a portable application but cannot write to its base directory, '%1'. If it should act as an installed application, remove the file '%2'."
 msgstr ""
+"MKVToolNix GUI agisce come un'applicazione portabile ma non può scrivere nella sua cartella di base, '%1'. \n"
+"Se è in funzione come applicazione installata, eliminare il file '%2'."
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:236
 #: src/mkvtoolnix-gui/merge/tool.cpp:345
@@ -11013,11 +11015,11 @@ msgstr "Salvataggio dei capitoli non riuscito."
 
 #: src/mkvtoolnix-gui/util/file.cpp:152
 #: src/mkvtoolnix-gui/util/option_file.cpp:31
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Saving the file '%1' failed. Error message from the system: %2"
 msgstr ""
-"Salvataggio del file non riuscito. \n"
-"Messaggio di errore dal sistema: %1"
+"Salvataggio del file '%1' non riuscito. \n"
+"Messaggio di errore dal sistema: %2"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:255
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:264
@@ -11869,7 +11871,7 @@ msgstr "Salva le modifiche nei dati CodecPrivate negli elementi CodecState invec
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
 msgid "Storing result in cache filed"
-msgstr ""
+msgstr "Salvataggio risultato nella cache file"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2298
@@ -12063,6 +12065,8 @@ msgstr "Dice a mkvmerge di scrivere almeno 'n' blocchi dati in ogni cluster."
 #, no-c-format
 msgid "Temporary files cannot be created. Additional information: %1"
 msgstr ""
+"Non è possibile creare file temporanei. \n"
+"Ulteriori informazioni: %1"
 
 #: src/mkvtoolnix-gui/info/job_settings_widget.cpp:94
 #: src/mkvtoolnix-gui/merge/input.cpp:1409
