program translations: update Brazilian Portuguese

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-06-11 14:24+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>, 2021-2023\n"
+"Last-Translator: Germano Fonseca <celger@bol.com.br>, 2016,2023\n"
 "Language-Team: Portuguese (Brazil) (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/pt_BR/)\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
@@ -24,7 +24,7 @@ msgid ""
 "The temporary TTA file for track ID {0} is being copied into the final TTA file. This may take some time.\n"
 msgstr ""
 "\n"
-"O arquivo TTA temporário para a faixa {0} está sendo copiado ao arquivo TTA final. Isso pode levar algum tempo.\n"
+"O arquivo TTA temporário para a faixa {0} está sendo copiado no arquivo TTA final. Isso pode levar algum tempo.\n"
 
 #: src/merge/output_control.cpp:269
 #, no-c-format
@@ -3549,7 +3549,7 @@ msgstr "Adicionando arquivos de etiqueta"
 #: src/mkvtoolnix-gui/merge/tab.cpp:602
 #, no-c-format
 msgid "Adding the job to the queue failed"
-msgstr ""
+msgstr "Falhou ao adicionar a tarefa à fila."
 
 #: src/mkvtoolnix-gui/chapter_editor/tab.cpp:236
 #, no-c-format
@@ -8628,7 +8628,7 @@ msgstr "Página &web do MKVToolNix"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:773
 #, no-c-format
 msgid "MKVToolNix GUI acts as a portable application but cannot write to its base directory, '%1'. If it should act as an installed application, remove the file '%2'."
-msgstr ""
+msgstr "MKVToolNix GUI age como um aplicativo portátil, mas não pode escrever em seu diretório base, '%1'. Se deve agir como um aplicativo instalado, remova o arquivo '%2'."
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:236
 #: src/mkvtoolnix-gui/merge/tool.cpp:345
@@ -11023,9 +11023,9 @@ msgstr "Falha ao salvar os capítulos."
 
 #: src/mkvtoolnix-gui/util/file.cpp:152
 #: src/mkvtoolnix-gui/util/option_file.cpp:31
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Saving the file '%1' failed. Error message from the system: %2"
-msgstr "Falha ao salvar o arquivo. Mensagem de erro do sistema: %1"
+msgstr "Falhou ao salvar o arquivo '%1'. Mensagem de erro do sistema: %2"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:255
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:264
@@ -12068,7 +12068,7 @@ msgstr "Diz ao mkvmerge para colocar no máximo 'n' blocos de dados em cada clus
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:769
 #, no-c-format
 msgid "Temporary files cannot be created. Additional information: %1"
-msgstr ""
+msgstr "Arquivos temporários não podem ser criados. Informação adicional: %1"
 
 #: src/mkvtoolnix-gui/info/job_settings_widget.cpp:94
 #: src/mkvtoolnix-gui/merge/input.cpp:1409
