program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -3498,7 +3498,7 @@ msgstr "Etiket dosyaları ekleniyor"
 #: src/mkvtoolnix-gui/merge/tab.cpp:602
 #, no-c-format
 msgid "Adding the job to the queue failed"
-msgstr ""
+msgstr "İş kuyruğa ekleme başarısız oldu"
 
 #: src/mkvtoolnix-gui/chapter_editor/tab.cpp:236
 #, no-c-format
@@ -8574,7 +8574,7 @@ msgstr "MKVToolNix &web sitesi"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:773
 #, no-c-format
 msgid "MKVToolNix GUI acts as a portable application but cannot write to its base directory, '%1'. If it should act as an installed application, remove the file '%2'."
-msgstr ""
+msgstr "MKVToolNix GKA, taşınabilir bir uygulama gibi davranır ancak kendi ana '%1' dizine yazamaz. Eğer yüklü bir uygulama gibi davranması gerekiyorsa, '%2' dosyasını kaldırın."
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:236
 #: src/mkvtoolnix-gui/merge/tool.cpp:345
@@ -10960,9 +10960,9 @@ msgstr "Bölümleri kaydetme başarısız oldu."
 
 #: src/mkvtoolnix-gui/util/file.cpp:152
 #: src/mkvtoolnix-gui/util/option_file.cpp:31
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Saving the file '%1' failed. Error message from the system: %2"
-msgstr "Dosyayı kaydetme başarısız oldu. Sistemden gelen hata iletisi: %1"
+msgstr "'%1' dosyasını kaydetme başarısız oldu. Sistemden gelen hata iletisi: %2"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:255
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:264
@@ -11808,7 +11808,7 @@ msgstr "Değişiklikler, kareler yerine CodecState öğeleri içinde CodecPrivat
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
 msgid "Storing result in cache filed"
-msgstr ""
+msgstr "Önbellekte saklanan sonuç dosyalandı"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2298
@@ -12000,7 +12000,7 @@ msgstr "mkvmerge'e her küme içine çoğu 'n' veri bloklarını koymasını sö
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:769
 #, no-c-format
 msgid "Temporary files cannot be created. Additional information: %1"
-msgstr ""
+msgstr "Geçici dosyalar oluşturulamaz. İlave bilgiler: %1"
 
 #: src/mkvtoolnix-gui/info/job_settings_widget.cpp:94
 #: src/mkvtoolnix-gui/merge/input.cpp:1409
