program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -5053,7 +5053,7 @@ msgstr "Transferència del color"
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:690
 #, no-c-format
 msgid "Community && &help forum"
-msgstr ""
+msgstr "Fòrum de la comunitat i d'a&juda"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
 #, no-c-format
@@ -11047,7 +11047,7 @@ msgstr "El desament dels capítols ha fallat."
 #: src/mkvtoolnix-gui/util/option_file.cpp:31
 #, no-c-format
 msgid "Saving the file '%1' failed. Error message from the system: %2"
-msgstr "No s'ha pogut desar el fitxer «%1». Missatge d'error del sistema: %2"
+msgstr "El desament del fitxer «%1» ha fallat. Missatge d'error del sistema: %2"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:255
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:264
