program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -5006,7 +5006,7 @@ msgstr "Transfert de couleurs"
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:690
 #, no-c-format
 msgid "Community && &help forum"
-msgstr ""
+msgstr "Communauté et &aide du forum"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
 #, no-c-format
