program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -5015,7 +5015,7 @@ msgstr "Trasferimento colore"
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:690
 #, no-c-format
 msgid "Community && &help forum"
-msgstr ""
+msgstr "Community e &forum supporto"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
 #, no-c-format
