program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -4978,7 +4978,7 @@ msgstr "Renk aktarımı"
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:690
 #, no-c-format
 msgid "Community && &help forum"
-msgstr ""
+msgstr "Topluluk ve &yardım forumu"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
 #, no-c-format
