program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-06-15 23:04+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: overdrive80 <lukillas.ole@gmail.com>, 2016-2023\n"
+"Last-Translator: GPL-advocate <adrlopgal@disroot.org>, 2023\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/es/)\n"
 "Language: es\n"
@@ -5084,7 +5084,7 @@ msgstr "Transferencia de color"
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:690
 #, no-c-format
 msgid "Community && &help forum"
-msgstr ""
+msgstr "Foro de la comunidad && y &ayuda"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
 #, no-c-format
